modules/015-admission-policy-engine/charts/constraint-templates/tests/container-resources/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  containers:
    - name: foo
      image: my.repo/app:latest
      resources:
        limits:
          cpu: 1
          memory: 128Mi
        requests:
          cpu: 1
          memory: 128Mi
