modules/015-admission-policy-engine/charts/constraint-templates/tests/container-resources/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8RequiredResources
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    limits:
      - cpu
      - memory
    requests:
      - cpu
      - memory
