modules/015-admission-policy-engine/charts/constraint-templates/tests/container-resources/disallowed2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  containers:
    - name: foo
      image: gcr.io/app:latest
      resources:
        limits:
          cpu: 1
        requests:
          cpu: 1
          memory: 128Mi
